crates/termdoc-cli/tests/snapshots/snapshots__data_toml_80_no-color-unicode.snap
---
source: crates/termdoc-cli/tests/snapshots.rs
expression: output
---
# termdoc's own manifest, as a TOML document
title = "termdoc"            # the binary
version = "0.1.0"
streaming = true
released = 2026-08-11
ratio = 1.4e1
mask = 0xFF_00

[package]
name = "termdoc"
authors = ["Arturo", "Codex"]
metadata.perf = { startup_ms = 3.9, memory_mb = 1.4 }

[[bin]]
name = "termdoc"
path = "src/main.rs"

[[bin]]
name = "td"
features = [
  "color",   # always on
  "unicode",
  "graphics",
]

[strings]
basic = "tab\there"
literal = 'C:\Users\termdoc'
"quoted key" = "café — 日本語"
long = """
Keys like a = 1 and # hashes
are only text in here."""
